# atosgi

./: .bazelrc  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  TODO.md  defs.bzl  pom.xml  version.bzl
bundles/: BUILD
examples/hello/: BUILD  BUILD_  Hello.java
launcher/: BUILD  BundleIndex.java  ClasspathScanner.java  Main.java  XManifest.java  config.properties  log4j2.xml
private/: artifact.bzl  bnd.bzl  bundles.bzl  launcher.bzl  map_maven_artifacts.bzl  providers.bzl  zip_overlay.bzl
tools/: precommit.sh  shared.sh
tools/format/: BUILD  markdown-format.sh  sh-format.sh  xml-format.sh
tools/lint/: sh-lint.sh
tools/pomgen/: BUILD  PomgenMain.java  pom-end.xmlfrag  pom-start.xmlfrag  pomgen.sh
tools/zipoverlay/: BUILD  ManyZipEntryStream.java  README.md  ZipOverlay.java
