module(
    name = "atosgi",
    version = "0.1.0",
)

bazel_dep(name = "aspect_rules_lint", version = "1.0.3")
bazel_dep(name = "rules_java", version = "7.6.5")
bazel_dep(name = "rules_pkg", version = "1.0.1")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "biz.aQute.bnd",
    sha256 = "674080fc8bb766af9bd721f4847467c6a7a25de3ea6a444525241b34126688b1",
    urls = ["https://bndtools.jfrog.io/artifactory/libs-snapshot/biz/aQute/bnd/biz.aQute.bnd/7.0.0/biz.aQute.bnd-7.0.0.jar"],
)

http_file(
    name = "google-java-format",
    sha256 = "33068bbbdce1099982ec1171f5e202898eb35f2919cf486141e439fc6e3a4203",
    url = "https://github.com/google/google-java-format/releases/download/v1.17.0/google-java-format-1.17.0-all-deps.jar",
)

bazel_dep(name = "rules_jvm_external", version = "6.4")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "boinsoft_atosgi_maven",
    artifacts = [
        # START-pom.xml
        "io.vavr:vavr:0.10.4",
        "org.osgi:osgi.core:8.0.0",
        "org.osgi:osgi.cmpn:7.0.0",
        "org.osgi:osgi.annotation:8.1.0",
        "org.osgi:org.osgi.util.function:1.2.0",
        "org.osgi:org.osgi.util.promise:1.3.0",
        "org.osgi:org.osgi.util.tracker:1.5.4",
        "org.osgi:org.osgi.service.component:1.5.1",
        "org.jline:jline:3.13.0",
        "org.fusesource.jansi:jansi:1.18",
        "org.apache.felix:org.apache.felix.main:7.0.5",
        "org.apache.felix:org.apache.felix.scr:2.2.12",
        "org.apache.felix:org.apache.felix.gogo.runtime:1.1.4",
        "org.apache.felix:org.apache.felix.gogo.jline:1.1.8",
        "org.apache.felix:org.apache.felix.gogo.command:1.1.2",
        "org.apache.felix:org.apache.felix.bundlerepository:2.0.10",
        "org.apache.felix:org.apache.felix.framework:7.0.5",
        "org.apache.felix:org.apache.felix.log:1.3.0",
        "org.ops4j.pax.logging:pax-logging-api:2.2.7",
        "org.ops4j.pax.logging:pax-logging-log4j2:2.2.7",
        "io.netty:netty-common:4.1.100.Final",
        "io.netty:netty-buffer:4.1.100.Final",
        "io.netty:netty-transport:4.1.100.Final",
        "io.netty:netty-handler:4.1.100.Final",
        "io.netty:netty-codec:4.1.100.Final",
        "io.netty:netty-codec-http:4.1.100.Final",
        "io.netty:netty-codec-http2:4.1.100.Final",
        "io.netty:netty-codec-socks:4.1.100.Final",
        "io.netty:netty-resolver:4.1.100.Final",
        "io.netty:netty-transport-native-unix-common:4.1.100.Final",
        "io.netty:netty-transport-native-epoll:4.1.100.Final",
        "io.netty:netty-transport-classes-epoll:4.1.100.Final",
        "io.netty:netty-handler-proxy:4.1.100.Final",
        # END-pom.xml
    ],
    strict_visibility = True,
)
use_repo(maven, "boinsoft_atosgi_maven")
